tests/invalid/duplicate-keys1.udif
# duplicate keys
key: value
key: value
